--- a/falconcam/index.html
+++ b/falconcam/index.html
@@ -21,7 +21,7 @@
 		<nav>
 			<div class="nav-wrapper orange">
 				<div class="container">
-					<a href="#" class="brand-logo"><i class="mdi-image-camera"></i> Falcon Cam</a>
+					<a href="#" class="brand-logo hide-on-small-only"><i class="mdi-image-camera"></i> Falcon Cam</a>
 				</div>
 			</div>
 		</nav>
@@ -54,7 +54,7 @@
 			</div>
 			<div class="footer-copyright">
 				<div class="container">
-					Made by <a class="orange-text text-lighten-3" href="http://wcs.com">networkWCS</a>
+					<a class="orange-text text-lighten-3" href="http://wcs.com">networkWCS</a>
 				</div>
 			</div>
 		</footer>
