--- a/falconcam/index.html
+++ b/falconcam/index.html
@@ -21,7 +21,7 @@
 		<nav>
 			<div class="nav-wrapper orange">
 				<div class="container">
-					<a href="#" class="brand-logo hide-on-small-only"><i class="mdi-image-camera"></i> Falcon Cam</a>
+					<a href="#" class="brand-logo"><i class="mdi-image-camera hide-on-small-only"></i> Falcon Cam</a>
 				</div>
 			</div>
 		</nav>
