change socket to pull from local, remove material JS

--- a/falconcam/index.html
+++ b/falconcam/index.html
@@ -4,10 +4,10 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
 		<meta name="application-name" content="FalconCam"/>
-		<script src="https://cdn.socket.io/socket.io-1.2.1.js"></script>
+		<!-- <script src="https://cdn.socket.io/socket.io-1.2.1.js"></script> -->
+		<script src="/socket.io/socket.io.js"></script>
 		<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/js/materialize.min.js"></script>
 		<script>
 			var socket = io();
 			$(document).ready(function() {
