--- a/falconcam/index.html
+++ b/falconcam/index.html
@@ -22,7 +22,9 @@
 		<nav>
 			<div class="nav-wrapper orange">
 				<div class="container">
-					<a href="#" class="brand-logo"><i class="mdi-image-camera hide-on-small-only"></i> Falcon Cam</a>
+				<a href="http://falconcam.wcs.com">
+					<img width="40" class="icon" src="http://falconcam.usadatanet.com/bird.png" alt=""></a>
+					<a href="http://falconcam.wcs.com" class="brand-logo">Syracuse Falcon Cam</a>
 				</div>
 			</div>
 		</nav>
