--- a/falconcam/index.html
+++ b/falconcam/index.html
@@ -17,14 +17,18 @@
 			});
 		</script>
 		<title>Falcon Cam</title>
+		<style>
+		body {
+    		background: #F8F8F8;
+		}
+		</style>
 	</head>
 	<body>
 		<nav>
-			<div class="nav-wrapper orange">
+			<div class="nav-wrapper orange darken-1">
 				<div class="container">
 				<a href="http://falconcam.wcs.com">
-					<img width="40" class="icon" src="http://falconcam.usadatanet.com/bird.png" alt=""></a>
-					<a href="http://falconcam.wcs.com" class="brand-logo">Syracuse Falcon Cam</a>
+					<img width="50" class="center brand-logo" src="http://falconcam.usadatanet.com/whiteBird.png" alt=""></a>
 				</div>
 			</div>
 		</nav>
@@ -32,7 +36,7 @@
 		<div class="container">
 			<div class="section">
 				<div class="row center">
-					<img src="" id="camera" class="z-depth-4 responsive-img">
+					<img src="" id="camera" class="z-depth-5 responsive-img">
 				</div>
 			</div>
 			<div class="row">
@@ -42,22 +46,22 @@
 				</div>
 			</div>
 		</div>
-		<footer class="page-footer blue">
+		<footer class="page-footer blue darken-1">
 			<div class="container">
 				<div class="row">
 					<div class="col s12">
 						<h5 class="white-text">Connect</h5>
 						<ul>
-							<li><a class="white-text" target="_blank" href="http://wcs.com">networkWCS</a></li>
-							<li><a class="white-text" target="_blank" href="#">State Tower Building</a></li>
-							<li><a class="white-text" target="_blank" href="http://www.dec.ny.gov/">NY State DEC</a></li>
+							<li><a class="white-text" target="_blank" href="http://wcs.com"><i class="mdi-navigation-chevron-right"></i>networkWCS</a></li>
+							<li><a class="white-text" target="_blank" href="http://syracusethenandnow.org/Dwntwn/HanoverSq/StateTwr1.htm"><i class="mdi-navigation-chevron-right"></i>State Tower Building</a></li>
+							<li><a class="white-text" target="_blank" href="http://www.dec.ny.gov/"><i class="mdi-navigation-chevron-right"></i>NY State DEC</a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
 			<div class="footer-copyright">
 				<div class="container">
-					<a class="orange-text text-lighten-3" href="http://wcs.com">networkWCS</a>
+					<a class="orange-text text-lighten-3" href="http://wcs.com">Powered by networkWCS</a>
 				</div>
 			</div>
 		</footer>
