--- a/falconcam/index.html
+++ b/falconcam/index.html
@@ -4,18 +4,25 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
 		<meta name="application-name" content="FalconCam"/>
-		<!-- <script src="https://cdn.socket.io/socket.io-1.2.1.js"></script> -->
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/
+		0.95.3/css/materialize.min.css">
+
 		<script>
+
 			var socket = io();
 			$(document).ready(function() {
-				socket.on("image sent", function (base64Image) {
-					$('img#camera').attr('src', base64Image);
+				socket.on("image1 sent", function (base64Image) {
+					$('img#camera1').attr('src', base64Image);
+				});
+				socket.on("image2 sent", function (base64Image) {
+					$('img#camera2').attr('src', base64Image);
 				});
 			});
+
 		</script>
+
 		<title>Falcon Cam</title>
 		<style>
 		body {
@@ -33,19 +40,27 @@
 			</div>
 		</nav>
 		<br><br>
-		<div class="container">
+
 			<div class="section">
 				<div class="row center">
-					<img src="" id="camera" class="z-depth-5 responsive-img">
+				<div class="col m12 l6">
+					<img src="" id="camera1" class="z-depth-5 responsive-img">
+				</div>
+				<div class="col m12 l6">
+					<img src="" id="camera2" class="z-depth-5 responsive-img">
+				</div>
+
 				</div>
 			</div>
+			<div class="container">
 			<div class="row">
 				<div class="col s12">
 					<h3 class="blue-text center light">Syracuse NY Falcon Cam</h3>
 					<p class="flow-text light">Perched on top of the 23rd floor of the <a class="orange-text" href="http://en.wikipedia.org/wiki/State_Tower_Building">State Tower Building</a> in Syracuse NY is a nest box occupied by peregrine falcons.  The <a class="orange-text" href="http://wcs.com">networkWCS</a> provided livestream gives us an up close view of these falcons as they raise their young and prepare for the wild.</p>
 				</div>
 			</div>
-		</div>
+			</div>
+
 		<footer class="page-footer blue darken-1">
 			<div class="container">
 				<div class="row">
