added second camera - hacked it in, but it seems to work

--- a/falconcam/index.html
+++ b/falconcam/index.html
@@ -68,7 +68,7 @@
 						<h5 class="white-text">Connect</h5>
 						<ul>
 							<li><a class="white-text" target="_blank" href="http://wcs.com"><i class="mdi-navigation-chevron-right"></i>networkWCS</a></li>
-							<li><a class="white-text" target="_blank" href="http://syracusethenandnow.org/Dwntwn/HanoverSq/StateTwr1.htm"><i class="mdi-navigation-chevron-right"></i>State Tower Building</a></li>
+							<li><a class="white-text" target="_blank" href="http://en.wikipedia.org/wiki/State_Tower_Building"><i class="mdi-navigation-chevron-right"></i>State Tower Building</a></li>
 							<li><a class="white-text" target="_blank" href="http://www.dec.ny.gov/"><i class="mdi-navigation-chevron-right"></i>NY State DEC</a></li>
 						</ul>
 					</div>
