--- a/falconcam/index.html
+++ b/falconcam/index.html
@@ -35,7 +35,7 @@
 			<div class="nav-wrapper orange darken-1">
 				<div class="container">
 				<a href="http://falconcam.wcs.com">
-					<img width="50" class="center brand-logo" src="http://falconcam.usadatanet.com/whiteBird.png" alt=""></a>
+					<img width="50" class="center brand-logo" src="http://falconcam.wcs.com/whiteBird.png" alt=""></a>
 				</div>
 			</div>
 		</nav>
